styles/algolia.css
:root {
    --docsearch-primary-color: hsl(var(--primary)) !important;
    --docsearch-text-color: hsl(var(--foreground)) !important;
    --docsearch-spacing: 12px;
    --docsearch-icon-stroke-width: 1.4;
    --docsearch-highlight-color: var(--docsearch-primary-color) !important;
    --docsearch-muted-color: hsl(var(--muted-foreground)) !important;
    --docsearch-container-background: rgba(0, 0, 0, 0.7) !important;
    --docsearch-logo-color: hsl(var(--primary-foreground)) !important;
    --docsearch-modal-width: 560px;
    --docsearch-modal-height: 600px;
    --docsearch-modal-background: hsl(var(--background)) !important;
    --docsearch-modal-shadow: none !important;
    --docsearch-searchbox-height: 56px;
    --docsearch-searchbox-background: hsl(var(--input)) !important;
    --docsearch-searchbox-focus-background: hsl(var(--card)) !important;
    --docsearch-searchbox-shadow: none !important;
    --docsearch-hit-height: 56px;
    --docsearch-hit-color: hsl(var(--foreground)) !important;
    --docsearch-hit-active-color: hsl(var(--primary-foreground)) !important;
    --docsearch-hit-background: hsl(var(--card)) !important;
    --docsearch-hit-shadow: none !important;
    --docsearch-key-gradient: none !important;
    --docsearch-key-shadow: none !important;
    --docsearch-key-pressed-shadow: none !important;
    --docsearch-footer-height: 44px;
    --docsearch-footer-background: hsl(var(--background)) !important;
    --docsearch-footer-shadow: none !important;
}

.DocSearch-Modal {
    @apply sm:mt-20
}

.DocSearch-Button {
    @apply pl-4 ml-0 sm:w-52 !w-full rounded-md bg-muted/55 !important
}

.DocSearch-Button-Placeholder {
    @apply ml-1 text-muted-foreground text-[14px] flex font-code !important
}

.DocSearch-Search-Icon {
    @apply w-4 h-4 text-muted-foreground !important
}

.DocSearch-Button-Keys {
    @apply sr-only
}

.DocSearch-Form>label>.DocSearch-Search-Icon {
    @apply w-4 h-4 mr-2
}

.DocSearch-Input {
    @apply text-[15px] !important
}

.DocSearch-SearchBar {
    @apply border-b pb-0.5 pt-0.5
}

.DocSearch-Cancel {
    @apply text-[13px] !important
}

.DocSearch-Hit-action>svg, .DocSearch-Reset>svg {
    @apply w-4 h-4
}

